--- a/boat/index.html
+++ b/boat/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love</title>
+    <title>boat</title>
     <link rel="stylesheet" href="./styles.css">
-    <style></style>
 </head>
 <body>
-    <main class="black">
-        
-    </main>
-    <audio src="./love.mp3" controls="" autoplay="" loop=""></audio>  
-    <div id="request"></div>
+
+
+    <canvas>
+    </canvas>
+    <div id="boat">
+        <img id="boat-img" src="./kayak.png" alt="LOADING FAILED">
+    </div>
+    <div id="paddle">
+        <img id="paddle-img" src="./paddle.png" alt="">
+    </div>
+    
+
+
+
+
+
     <script src="./script.js"></script>
 </body>
 </html>
