--- a/boattest/index.html
+++ b/boattest/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
-    <style></style>
 </head>
 <body>
-    <main class="black">
-        
-    </main>
-    <audio src="./love.mp3" controls="" autoplay="" loop=""></audio>  
-    <div id="request"></div>
+    <canvas>
+    </canvas>
+    
+    <div class="cover cover1"></div>
+    <div class="cover cover2"></div>
+    <div class="cover cover3"></div>
+    <div class="cover cover4"></div>
+
+    <button id="btn">err</button>
+
+
     <script src="./script.js"></script>
 </body>
 </html>
