--- a/balls/index.html
+++ b/balls/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love</title>
+    <title>balls</title>
     <link rel="stylesheet" href="./styles.css">
-    <style></style>
 </head>
 <body>
-    <main class="black">
-        
-    </main>
-    <audio src="./love.mp3" controls="" autoplay="" loop=""></audio>  
-    <div id="request"></div>
+    <div class="balls" id="one"></div>
+    <div class="balls" id="two"></div>
+    <div class="balls" id="three"></div>
+
+
+
+
+
     <script src="./script.js"></script>
 </body>
 </html>
