--- a/flappyFish/vanillaFlappy/index.html
+++ b/flappyFish/vanillaFlappy/index.html
@@ -12,5 +12,8 @@
     <canvas id="canvas" width="600" height="300"></canvas>
 
     <script src="./script.js"></script>
+    <button>
+        
+    </button>
 </body>
 </html>
