--- a/pomofocus/index.html
+++ b/pomofocus/index.html
@@ -5,38 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/navstyles.css">
+	<link rel="stylesheet" href="./css/mainstyles.css">
 </head>
 <body>
-
-    <div class="navbar">
-        <div class="navbrand">
+	<!--NAVBAR-->
+	<div class="nav">
+		<div class="navfirst">
+			<p><img src="./images/icon-white2.png" alt="">Pomofocus</p>
+		</div>
+		<div class="empty">
 			
-            <p><img src="./images/icon-white2.png" alt="">Pomofocus</p>
-        </div>
-        <div class="empty">
-			empty
 		</div>
-        <div class="navbuttons">
+		<div class="navlast">
 			<button>
-				<img src="" alt="">
+				<div>
+					<img src="./images/graph-white.png" alt="">
+					<p>Report</p>
+				</div>
 			</button>
 			<button>
-				<img src="" alt="">
+				<div>
+					<img src="./images/config-white.png" alt="">
+					<p>Setting</p>
+				</div>
 			</button>
 			<button>
-				<img src="" alt="">
+				<div>
+					<img src="./images/user-white.png" alt="">
+					<p>Login</p>
+				</div>
 			</button>
 		</div>
+	</div>
+	<div class="loadingbar">
+		<div class="loadedbar">
 
-
-		<div class="loadingbar">
-			<div class="loadedbar">
-
-			</div>
 		</div>
-    </div>
+	</div>
+	<!--NAVBAR-->
 
+	<!--MAIN+++-->
+	<div class="main">
+		<div>
+			<button>
+				Pomodoro
+			</button><button>
+				Short Break
+			</button><button>
+				Long Break
+			</button>
+		</div>
+		<div>
+			<h1 style="font-size: 100px; margin: 20px 0px 0px 0px; text-align: center;">
+				00:00
+			</h1>
+		</div>
+		<div class="mainbutton">
+			<button style="background-color: white;">
+				Start
+			</button>
+		</div>
+	</div>
 
     <script src="./script.js"></script>
 </body>
