HANDYMAN LETS GO

--- a/handyman/index.html
+++ b/handyman/index.html
@@ -7,39 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
-    <link rel="stylesheet" href="../handyman/assets/css/styles.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Easy Handyman</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link header-btn" href="#">GET QUOTE</a> 
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <nav class="munnav">
+        <p>Easy Handyman</p>
+        <div class="empty"></div>
+        <a class="navbutton" href="tel:+1 (437) 388-8367">GET QUOTE (Call)</a>
     </nav>
 
 
     <main class="container headline-div">
-        <h1 class="headline">Easy Handyman</h1>
+        <h1 class="headline">Easy Handyman North York</h1>
         <p class="headline-description">Professional Handyman</p>
-        <a class="nav-link headline-btn" href="#">GET QUOTE</a>
+        <a class="headline-btn" href="tel:+1 (437) 388-8367">GET QUOTE (Call)</a>
     </main>
 
 
     <main class="container">
-        <img class="big-pic" src="../handyman/assets/images/HSN-Code-and-GST-Rate-for-Tools-and-Kitchenware.jpg" alt="">
+        <img class="big-pic" src="./assets/images/HSN-Code-and-GST-Rate-for-Tools-and-Kitchenware.jpg" alt="">
     </main>
 
+<!--
     <main class="container testimonials">
         <p class="title">Testimonials</p>
         <div class="row">
@@ -74,66 +64,40 @@
             </div>
         </div>
     </main>
+-->
+
 
 
 
     <main class="container-md">
         <p class="title">Gallary</p>
-        <div class="row">
-            <div class="col-sm">
-                <img style="object-fit:cover; width: 100%; height: 100%; object-position: left; border-radius: 5px;"
-                    src="../handyman/assets/images/gallary1.jpg" alt="">
-            </div>
-            <div class="col-sm">
-                <img style="object-fit:cover; width: 100%; height: 100%; object-position: left; border-radius: 5px;"
-                    src="../handyman/assets/images/gallary2.jpg" alt="">
-            </div>
-            <div class="col-sm">
-                <img style="object-fit:cover; width: 100%; height: 100%; object-position: left; border-radius: 5px;"
-                    src="../handyman/assets/images/gallary3.jpg" alt="">
-            </div>
-        </div>
-        <div class="row second-row">
-            <div class="col-sm">
-                <img style="object-fit:cover; width: 100%; height: 100%; object-position: left; border-radius: 5px;"
-                    src="../handyman/assets/images/gallary4.jpg" alt="">
-            </div>
-            <div class="col-sm">
-                <img style="object-fit:cover; width: 100%; height: 100%; object-position: left; border-radius: 5px;"
-                    src="../handyman/assets/images/gallary5.jpg" alt="">
-
-            </div>
-            <div class="col-sm">
-                <img style="object-fit:cover; width: 100%; height: 100%; object-position: left; border-radius: 5px;"
-                    src="../handyman/assets/images/gallary6.jpg" alt="">
-            </div>
+        <div class="gallary-grid">
+            <img src="./assets/images/gallary1.jpg" alt="">
+            <img src="./assets/images/gallary2.jpg" alt="">
+            <img src="./assets/images/gallary3.jpg" alt="">
+            <img src="./assets/images/gallary4.jpg" alt="">
+            <img src="./assets/images/gallary5.jpg" alt="">
+            <img src="./assets/images/gallary6.jpg" alt="">
         </div>
     </main>
+    
 
 
 
 
 
 
+    <main class="end">
+        <p>7 AM - 6 PM Friday</p>
+        <p>7 AM - 6 PM Saturday</p>
+        <p>7 AM - 6 PM Sunday</p>
+        <p>7 AM - 6 PM Monday</p>
+        <p>7 AM - 6 PM Tuesday</p>
+        <p>7 AM - 6 PM Wednesday</p>
+        <p>7 AM - 6 PM Thrusday</p>
 
-
-
-
-
-    <div class="bg-primary contacts text-white bold p">
-        <p class="title2">Contact us</p>
-        <div class="row">
-            <div class="col">
-                <p><a class="links" href="">phone no: 000</a></p>
-            </div>
-            <div class="col">
-                <p><a class="links" href="">whatsapp: 000</a></p>
-            </div>
-            <div class="col">
-                <p><a class="links" href="">facebook: 000</a></p>
-            </div>
-        </div>
-    </div>
+        <span></span>
+    </main>
 
 
 
