--- a/handyman/index.html
+++ b/handyman/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Easy Handyman</a>
+            <a class="navbar-brand" href="#">Easy Handyman North York</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
 
 
     <main class="container headline-div">
-        <h1 class="headline">Easy Handyman</h1>
+        <h1 class="headline">Easy Handyman North York</h1>
         <p class="headline-description">Professional Handyman</p>
         <a class="nav-link headline-btn" href="#">GET QUOTE</a>
     </main>
@@ -40,6 +40,7 @@
         <img class="big-pic" src="../handyman/assets/images/HSN-Code-and-GST-Rate-for-Tools-and-Kitchenware.jpg" alt="">
     </main>
 
+<!--
     <main class="container testimonials">
         <p class="title">Testimonials</p>
         <div class="row">
@@ -74,6 +75,8 @@
             </div>
         </div>
     </main>
+-->
+
 
 
 
