--- a/mytraveljournal/index.html
+++ b/mytraveljournal/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <div id="body">
-        
+            
         </div>
-		
+		<h1>IS THIS WORKING?</h1>
 		
 		
         <script type="module" src="./src/main.js"></script>
