--- a/mytraveljournal/index.html
+++ b/mytraveljournal/index.html
@@ -14,7 +14,7 @@
 		<h1>IS THIS WORKING?</h1>
 		
 		
-        <script type="module" src="./src/main.js"></script>
+        <script type="module" src="./src/main.jsx"></script>
 	  
     </body>
 </html>
