--- a/saddam/saddam.html
+++ b/saddam/saddam.html
@@ -74,6 +74,9 @@
 						x = x - 18;
 						sdm.left = x + "px";
 					break;
+					case"p":
+						console.log("you pressed p")
+					break;
 						
 					case"q":
 						
