--- a/hearts/index.html
+++ b/hearts/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body id="body">
+    <!-- <audio autoplay>
+        <source src="./song.mp3" type="audio/mpeg">
+    </audio> -->
+
+    <embed name="GoodEnough" src="./song.mp3" loop="true" hidden="true" autostart="true" style="display: none;">
     <script src="./script.js"></script>
 </body>
 </html>
