--- a/hearts/index.html
+++ b/hearts/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body id="body">
-    <!-- <audio autoplay>
+    <div class="warning">Click to Begin!!!</div>
+    <audio loop >
         <source src="./song.mp3" type="audio/mpeg">
-    </audio> -->
+    </audio>
 
-    <embed name="GoodEnough" src="./song.mp3" loop="true" hidden="true" autostart="true" style="display: none;">
+
+    <!-- <embed src="./song.mp3" type="audio/mp3" loop="true" hidden="true" autostart="false" style="display: none;"> -->
     <script src="./script.js"></script>
 </body>
 </html>
