--- a/hearts/index.html
+++ b/hearts/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>for youuu</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet"> -->
+    
 </head>
 <body id="body">
     <div class="warning">Click to Begin!!!</div>
