--- a/mun/index.html
+++ b/mun/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>ew</title>
         <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
     </head>
 
     <body>
