--- a/hearts/index.html
+++ b/hearts/index.html
@@ -9,7 +9,11 @@
     
 </head>
 <body id="body">
-    <div class="warning">Click to Begin!!!</div>
+    <div class="warning">
+        <p>
+            Click to Begin!!!
+        </p>
+    </div>
     <audio loop >
         <source src="./song.mp3" type="audio/mpeg">
     </audio>
