--- a/hearts/index.html
+++ b/hearts/index.html
@@ -8,15 +8,20 @@
     <!-- <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet"> -->
     
 </head>
-<body id="body">
+<body  id="body">
+    <audio loop >
+        <source src="./song.mp3" type="audio/mpeg">
+    </audio>
+
     <div class="warning">
         <p>
             Click to Begin!!!
         </p>
     </div>
-    <audio loop >
-        <source src="./song.mp3" type="audio/mpeg">
-    </audio>
+
+    <button class="handleClickClass">qeqwe</button>
+    <button class="handleClickClass">qeqwe</button>
+
 
 
     <!-- <embed src="./song.mp3" type="audio/mp3" loop="true" hidden="true" autostart="false" style="display: none;"> -->
