--- a/color picker/index.html
+++ b/color picker/index.html
@@ -14,7 +14,7 @@
             <label for="hex">hex code</label>
             <input type="text" name="hex" id="hex" placeholder="#000000">
             <label for="slider" id="sliderText">0%</label>
-            <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider">
+            <input type="range" min="-20" max="20" value="0" class="slider" id="slider" name="slider">
         </div>
         
 
@@ -22,7 +22,7 @@
             <p>input color</p>
             <div id="input-color" class="box"></div>
 
-            <p>altered color</p>
+            <p id="alteredLabel">Altered Color: </p>
             <div id="altered-color" class="box"></div>
         </div>
         
