--- a/react-prac/index.html
+++ b/react-prac/index.html
@@ -1,13 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>munib react</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <title>Frontend Mentor | Blog preview card</title>
+  <script src="https://kit.fontawesome.com/fd25269949.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+
+  <div class="card">
+    <img class="card--image" src="/illustration-article.svg" alt="">
+  
+    <h4 class="card--tag">Learning <svg id="info" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg> <div id="infoTab">this is very useful</div></h1>
+    
+    <p class="card--date">Published 31 Aug 2024</p>
+    <h2 class="card--title">HTML and CSS foundations</h2>
+
+    <div id="root">
+
+    </div>
+  
+    <div class="OP">
+      <img src="/image-avatar.webp" alt="">
+      <h4><strong>mr.mooni</strong></h4>
+    </div>
+  </div>
+
+
+  <script src="./src/main.jsx"></script>
+</body>
 </html>
