--- a/water/index.html
+++ b/water/index.html
@@ -13,6 +13,7 @@
 
 
     <div id="root"></div>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
