--- a/clock/index.html
+++ b/clock/index.html
@@ -7,6 +7,7 @@
     <title>its cock o'clock</title>
   </head>
   <body>
+    <!-- nothing -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
